--- a/Product_Swipe/Screens/Add Product/View/StoryBoard/AddProducts.storyboard
+++ b/Product_Swipe/Screens/Add Product/View/StoryBoard/AddProducts.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -210,10 +210,11 @@
                     </view>
                     <connections>
                         <outlet property="imageVIew" destination="TPM-8n-jRo" id="Ago-Mk-ttQ"/>
+                        <outlet property="mainView" destination="8yV-OD-acq" id="I3l-H4-e2n"/>
                         <outlet property="pickerView" destination="OfB-qJ-ota" id="d0s-Qi-vr7"/>
                         <outlet property="productImageView" destination="dFj-Rw-eVJ" id="LFv-kU-mkl"/>
                         <outlet property="productNameTf" destination="blK-to-z9q" id="6mp-zC-SHC"/>
-                        <outlet property="productNameView" destination="wY9-L3-fxO" id="GyF-n7-u89"/>
+                        <outlet property="productNameView" destination="wY9-L3-fxO" id="QRt-f0-4Xw"/>
                         <outlet property="productPriceTf" destination="GB3-i5-QXP" id="8LI-lg-J8K"/>
                         <outlet property="productPriceView" destination="TzO-cD-4mF" id="UFZ-QL-cdB"/>
                         <outlet property="productRateTf" destination="vSc-k0-XZR" id="eKj-2A-BOS"/>
